--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~46.0.16",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
