--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "expo": "~46.0.16",
-    "expo-secure-store": "~11.3.0",
-    "expo-status-bar": "~1.4.0",
+    "expo": "^48.0.0",
+    "expo-secure-store": "~12.1.1",
+    "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
