--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-gifted-chat": "^1.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
